@@ -424,8 +424,11 @@ main(int argc, char **argv, char **envp)
 #ifdef USE_M17N
     if (non_null(Locale = getenv("LC_ALL")) ||
 	non_null(Locale = getenv("LC_CTYPE")) ||
-	non_null(Locale = getenv("LANG")))
-	DisplayCharset = DocumentCharset = SystemCharset = wc_guess_locale_charset(Locale, SystemCharset);
+	non_null(Locale = getenv("LANG"))) {
+	DisplayCharset = wc_guess_locale_charset(Locale, DisplayCharset);
+	DocumentCharset = wc_guess_locale_charset(Locale, DocumentCharset);
+	SystemCharset = wc_guess_locale_charset(Locale, SystemCharset);
+    }
 #ifdef __EMX__
     CodePage = wc_guess_charset(getCodePage(), 0);
     if (CodePage)
