@@ -1,5 +1,10 @@
 2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* main.c (main): don't use SystemCharset for default of
+		DisplayChaset, DocumentCharset
+
+2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* w3m 0.5
 	* version.c.in: update
 	* doc/README: version 0.5, release date, maintainer
